--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -27,10 +27,10 @@ background: linear-gradient(0deg, rgb(136, 136, 136) 0%, rgba(255,255,255,0) 100
 }
 
 .miniwindow {
-    width: 1%;
+    width: 10px;
     height: 300px;
     background-color: pink;
-    margin:0 5px;
+    margin: 0 1px;
     background-attachment: fixed;
     
     background-position: center;
@@ -40,6 +40,7 @@ background: linear-gradient(0deg, rgb(136, 136, 136) 0%, rgba(255,255,255,0) 100
     transition: 1s all ease;
     
 }
+
 .miniwindow.__close {
     height: 0 !important;
 }
