--- a/src/components/Entry.css
+++ b/src/components/Entry.css
@@ -1,9 +1,10 @@
 .EntryContainer {
     border-top: 1px solid;
     display: flex;
-}
-.EntryContainer h1{
-    font-size: 5rem;
+    flex-direction: column;
+    & h1{
+        font-size: 5rem;
+    }
 }
 .left-part {
     flex: 1;
@@ -30,12 +31,12 @@
     flex: 1;
     border-bottom: 1px solid;
     margin: 0 5px;
+    &:first-child {
+        margin-right: 5px;
+    }
 }
 .title-container {
     flex: 1;
     border-bottom: 1px solid;
     margin: 0 5px;
-}
-.metadata-item:first-child {
-    margin-right: 5px;
 }
