--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -27,7 +27,7 @@ background: linear-gradient(0deg, rgb(136, 136, 136) 0%, rgba(255,255,255,0) 100
 }
 
 .miniwindow {
-    width: 10px;
+    width: 100%;
     height: 300px;
     background-color: pink;
     margin: 0 1px;
