--- a/src/components/MosaicView/MosaicView.css
+++ b/src/components/MosaicView/MosaicView.css
@@ -1,45 +1,52 @@
-.mosaicview-container{
-    width: 100%;
-    height: 40%;
-    display: flex;
-    text-align: -webkit-center;
-    justify-content: center;
-    align-items: center;
-    justify-content: center;
-    background-size: cover;
-    mix-blend-mode: unset;
+.mosaicview-container {
+  width: 100%;
+  height: 500px;
+  display: flex;
+  text-align: -webkit-center;
+  justify-content: center;
+  align-items: center;
+  justify-content: center;
+  background-size: cover;
+  mix-blend-mode: unset;
 }
 
 .mosaicview {
-    width: 10px;
-    height: 300px;
-    background-color: pink;
-    margin: 0 1px;
-    background-attachment: fixed;
-    
-    background-position: center;
-    background-size: 20%;
-    -webkit-animation: mover 3s infinite   cubic-bezier(0.41, 0.01, 0.69, 0.99) alternate;
-    animation: mover 3s infinite   cubic-bezier(0.41, 0.01, 0.69, 0.99) alternate;
-    transition: 1s all ease;
-    
+  width: 100%;
+  height: 300px;
+  background-color: gray;
+  margin: 0 1px;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
+  -webkit-animation: mover 3s infinite cubic-bezier(0.41, 0.01, 0.69, 0.99)
+    alternate;
+  animation: mover 3s infinite cubic-bezier(0.41, 0.01, 0.69, 0.99) alternate;
+  transition: 1s all ease;
 
-    &.__close {
-        height: 0 !important;
-    }
-    &:hover {
-        height: 80% !important;
-    }
-    &.__close:hover {
-        height: 0 !important;
-    }
+  &.__close {
+    height: 0 !important;
+  }
+  &:hover {
+    height: 80% !important;
+  }
+  &.__close:hover {
+    height: 0 !important;
+  }
 }
 
 @-webkit-keyframes mover {
-    0% { transform: translateY(20px) ; }
-    100% { transform: translateY(-20px) ;  }
+  0% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
 }
 @keyframes mover {
-    0% { transform: translateY(20px) ;  }
-    100% { transform: translateY(-20px) ;  }
+  0% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(-10px);
+  }
 }
