majost changes, documentation, and actions

--- a/src/components/Entry.css
+++ b/src/components/Entry.css
@@ -1,7 +1,5 @@
 .EntryContainer {
     border-top: 1px solid;
-    display: flex;
-    flex-direction: column;
     & h1{
         font-size: 5rem;
     }
@@ -40,3 +38,45 @@
     border-bottom: 1px solid;
     margin: 0 5px;
 }
+.slider-container {
+    height: 400px;
+}
+section {
+    border-top: 1px solid;
+    margin: 100px 0;
+}
+
+.prop-title {
+    font-size: 3rem;
+    margin: 0;
+}
+
+    pre {
+        background: #f4f4f4;
+        border: 1px solid #ddd;
+        border-left: 3px solid #f36d33;
+        color: #666;
+        page-break-inside: avoid;
+        font-family: monospace;
+        font-size: 15px;
+        line-height: 1.6;
+        margin-bottom: 1.6em;
+        max-width: 100%;
+        overflow: auto;
+        padding: 1em 1.5em;
+        display: block;
+        word-wrap: break-word;
+    }
+    code {
+        padding: 5px;
+        background-color: rgb(0, 0, 0);
+        border-radius: 5%;
+        color: white;
+    }
+    .default {
+        font-size: 1.5rem;
+        border-top: 1px solid;
+        border-bottom: 1px solid;
+        padding: 10px 0;
+        margin-top: 10px;
+    }
