--- a/src/components/Intro.css
+++ b/src/components/Intro.css
@@ -52,15 +52,6 @@ background: linear-gradient(0deg, rgb(136, 136, 136) 0%, rgba(255,255,255,0) 100
     height: 0 !important;
 }
 
-@-webkit-keyframes mover {
-    0% { transform: translateY(20px) translateZ(5px); opacity: 1; }
-    100% { transform: translateY(-20px) translateZ(-5px);opacity: .1;  }
-}
-@keyframes mover {
-    0% { transform: translateY(20px) translateZ(5px); opacity: 1; }
-    100% { transform: translateY(-20px) translateZ(-5px); opacity: .1; }
-}
-
 .cursor {
     width: 80px;
     height: 80px;
@@ -77,6 +68,8 @@ background: linear-gradient(0deg, rgb(136, 136, 136) 0%, rgba(255,255,255,0) 100
 scrollbar-width: none;
 }
 .info {
+    padding: 15px;
+
     position: absolute;
     width: 30vw;
     height: 20vw;
