--- a/src/components/MovingSlider/MovingSlider.css
+++ b/src/components/MovingSlider/MovingSlider.css
@@ -1,16 +1,16 @@
-.mosaicview-container {
+.movingslider-container {
   width: 100%;
-  height: 500px;
+  height: 100%;
   display: flex;
-  text-align: -webkit-center;
   justify-content: center;
   align-items: center;
   justify-content: center;
   background-size: cover;
   mix-blend-mode: unset;
+  margin: 0 auto;
 }
 
-.mosaicview {
+.movingslider {
   width: 100%;
   height: 300px;
   background-color: gray;
@@ -18,16 +18,13 @@
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
-  -webkit-animation: mover 3s infinite cubic-bezier(0.41, 0.01, 0.69, 0.99)
-    alternate;
-  animation: mover 3s infinite cubic-bezier(0.41, 0.01, 0.69, 0.99) alternate;
-  transition: 1s all ease;
+  transition: .5s height ease;
 
   &.__close {
     height: 0 !important;
   }
   &:hover {
-    height: 80% !important;
+    height: 100% !important;
   }
   &.__close:hover {
     height: 0 !important;
