--- a/src/components/Navbar/NavbarTopItem.css
+++ b/src/components/Navbar/NavbarTopItem.css
@@ -40,12 +40,13 @@
     cursor: pointer;
 }
 .NavbarTopItem-innercontent {
-    background: #000000b9;
+    background: #ffffffb9;
     border-top: 1px solid;
-    border-bottom: 1px  solid;
-    color: white;
+    border-bottom: 1px solid;
+    color: black;
     height: 80vh;
     padding: 15px;
+    font-size: 2rem;
     position: absolute;
     z-index: 999;
     margin-top: 5px;
@@ -53,6 +54,7 @@
     transform: translateY(-150%);
     transition: .5s all ease;
     overflow: auto;
+    backdrop-filter: blur(5px);
 }
 .NavbarTopItem-innercontent iframe {
     width: 100%;
